# Private-Cross-Chain-RFQ-

./: .gitignore  Anchor.toml  Cargo.toml  Private Cross-Chain RFQ Desk.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  verify-all.sh
app/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/.next/: react-loadable-manifest.json  trace
app/.next/cache/: .tsbuildinfo
app/.next/server/: _error.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/.next/server/app/: page.js  page_client-reference-manifest.js
app/.next/server/pages/: _error.js
app/.next/server/vendor-chunks/: @noble.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @tanstack.js  @wallet-standard.js  base-x.js  bn.js.js  borsh.js  bs58.js  clsx.js  dijkstrajs.js  eventemitter3.js  jayson.js  lucide-react.js  next.js  node-fetch.js  pngjs.js  qrcode.js  rpc-websockets.js  safe-buffer.js  superstruct.js  text-encoding-utf-8.js  tr46.js  use-sync-external-store.js  uuid.js  webidl-conversions.js  whatwg-url.js  ws.js  zustand.js
app/.next/static/chunks/: _app-pages-browser_node_modules_solflare-wallet_metamask-sdk_lib_esm_index_js.js  _app-pages-browser_node_modules_solflare-wallet_sdk_lib_esm_index_js.js  _app-pages-browser_src_components_SettlementDashboard_tsx.js  _app-pages-browser_src_components_StatusStepper_tsx.js  (+3 more)
app/src/app/: globals.css  layout.d.ts  layout.tsx  page.d.ts  page.tsx
app/src/components/: BidSubmissionModal.d.ts  BidSubmissionModal.tsx  OrderBook.d.ts  OrderBook.tsx  RfqCreationForm.d.ts  RfqCreationForm.tsx  SettlementDashboard.d.ts  SettlementDashboard.tsx  StatusStepper.d.ts  StatusStepper.tsx
app/src/context/: WalletContext.d.ts  WalletContext.tsx
app/src/hooks/: useEncrypt.d.ts  useEncrypt.ts  useIka.d.ts  useIka.ts  useRfqProgram.d.ts  useRfqProgram.ts
app/src/lib/: constants.d.ts  constants.ts
app/src/stores/: rfqStore.d.ts  rfqStore.ts
encrypt-circuit/: Cargo.toml
encrypt-circuit/src/: lib.rs
programs/private_rfq/: Cargo.toml
programs/private_rfq/src/: errors.rs  lib.rs  state.rs
programs/private_rfq/src/instructions/: cpi.rs  execute_settlement.rs  force_cancel_timeout.rs  initialize_rfq.rs  mod.rs  request_fhe_match.rs  request_match_decrypt.rs  reveal_match.rs  submit_bid.rs
relayer/: package.json  tsconfig.json
relayer/src/: api.ts  index.ts  rfq.db
scripts/: e2e-demo.js  e2e-demo.ts
tests/: private_rfq.js  private_rfq.ts
(+73 files in other folders)
